--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.7",
+    "multer": "^1.4.1",
     "randomatic": "^3.1.1",
+    "sharp": "^0.22.1",
     "validator": "^10.11.0"
   }
 }
